--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>my test</title>
 </head>
 <body>
-<H1>hello world!</H1>
+	<H1>hello world!</H1>
 </body>
 </html>
